# playground

./: LICENSE  README.md
qt/projects/minimal-main-window/: CMakeLists.txt
qt/projects/minimal-main-window/include/: mainwindow.h
qt/projects/minimal-main-window/src/: mainwindow.cpp
qt/projects/plugin-app-template/: CMakeLists.txt
qt/projects/plugin-app-template/resources/: CMakeLists.txt  resources.qrc
qt/projects/plugin-app-template/resources/qss/: style.qss
qt/projects/plugin-app-template/src/: CMakeLists.txt  main.cpp
qt/projects/plugin-app-template/src/app/: CMakeLists.txt
qt/projects/plugin-app-template/src/app/logging/: CMakeLists.txt  Log.h  Logger.cpp  Logger.h
qt/projects/plugin-app-template/src/app/logging/include/JApp/: Log.h  Logger.h
qt/projects/plugin-app-template/src/app/logging/internal/JApp/Internal/: LogUtils.h
qt/projects/plugin-app-template/src/app/logging/src/: Logger.cpp
qt/projects/plugin-app-template/src/app/models/: CMakeLists.txt  qqmlsortfilterproxymodel.cpp  qqmlsortfilterproxymodel.h
qt/projects/plugin-app-template/src/app/models/filters/: alloffilter.cpp  alloffilter.h  anyoffilter.cpp  anyoffilter.h  expressionfilter.cpp  expressionfilter.h  filter.cpp  filter.h  filtercontainer.cpp  filtercontainer.h  filtercontainerfilter.cpp  filtercontainerfilter.h  filtersqmltypes.cpp  indexfilter.cpp  indexfilter.h  rangefilter.cpp  rangefilter.h  regexpfilter.cpp  regexpfilter.h  rolefilter.cpp  rolefilter.h  valuefilter.cpp  valuefilter.h
qt/projects/plugin-app-template/src/app/models/proxyroles/: expressionrole.cpp  expressionrole.h  filterrole.cpp  filterrole.h  joinrole.cpp  joinrole.h  proxyrole.cpp  proxyrole.h  proxyrolecontainer.cpp  proxyrolecontainer.h  proxyrolesqmltypes.cpp  regexprole.cpp  regexprole.h  singlerole.cpp  singlerole.h  switchrole.cpp  switchrole.h
qt/projects/plugin-app-template/src/app/models/sorters/: expressionsorter.cpp  expressionsorter.h  filtersorter.cpp  filtersorter.h  rolesorter.cpp  rolesorter.h  sorter.cpp  sorter.h  sortercontainer.cpp  sortercontainer.h  sortersqmltypes.cpp  stringsorter.cpp  stringsorter.h
qt/projects/plugin-app-template/src/app/plugins/: IPlugin.h
qt/projects/plugin-app-template/src/lib/extensionsystem/: PluginManager.h
qt/projects/plugin-app-template/src/plugins/: CMakeLists.txt
qt/projects/plugin-app-template/src/plugins/manager/: PluginManager.cpp  PluginManager.h
qt/projects/plugin-app-template/src/services/: CMakeLists.txt
qt/projects/plugin-app-template/src/utils/: CMakeLists.txt
qt/projects/styling-main-window/: CMakeLists.txt
qt/projects/styling-main-window/include/: mainwindow.h
qt/projects/styling-main-window/resources/qss/: style.qss
qt/projects/styling-main-window/src/: main.cpp  mainwindow.cpp
